--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,13 @@ h1 {
   padding: 10px;
   margin: 5px;
 }
+
+#main {
+  text-align: centers;
+}
+
+.welcome {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-color: navy;
+}
